# akita-django

./: README.md  setup.cfg  tests.py
akita_django/: test.py
