[metadata]
name = akita_django
version = 0.0.1
url = https://github.com/akitasoftware/akita-django
author = Cole Schlesinger
author_email = cole@akitasoftware.com
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
description = Utilities for connecting Akita to Django
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >=3.6
